# danielnaylor.uk

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  app.py  compose.yml  docker-compose.nix  flake.nix  generate_webpage.py  haystack_highlighter.py  html_fixing.py  html_to_txt.py  index_htmls.py  pyproject.toml  run.sh  search.py  source_items.py
.github/workflows/: publish-docker.yml  release-please.yml
sonic/: Dockerfile  config.cfg
templates/: 404.html  500.html  base.html  blog_home.html  home.html  navbar.html  navbar_alt.html  notes.html  notes_home.html  notes_home_alt.html  notes_navbar.html  notes_old.html  notes_paginated.html  notes_search.html  notes_test.html  notes_test2.html  notes_test3.html  sources_dir.html
